--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -162,7 +162,7 @@ if (!$categoryIds == null){
 						var addthis_config = {"data_track_clickback":true};
 						var addthis_share = { 
 						    templates: {
-						                   twitter: catName + ' on Rooja.com. '+ saleName + ' {{url}} via @RoojaFashion'
+						                   twitter: '' + catName + ' on Rooja.com. '+ saleName + ' {{url}} via @RoojaFashion'
 						               }
 						}
 					</script>
