--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -145,7 +145,7 @@ if (!$categoryIds == null){
 						//$catName = str_replace('"', '\"', $catName);
 						
 						$saleName = $_helper->productAttribute($_product, $_product->getName(), 'name');
-						
+						echo $saleName;
 						//$saleName = str_replace("'", "\'", $saleName);
 						//$saleName = str_replace('"', '\"', $saleName);
 					?>
