--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -168,7 +168,7 @@ P.S. Hurry!"/>
 				<textarea name="comment" id="comment" title="<?php echo Mage::helper('contacts')->__('Comment') ?>" class="required-entry input-text" cols="5" rows="3" placeholder="Your Message"></textarea>
 			                
 			        <input type="text" name="hideit" id="hideit" value="" style="display:none !important;" />
-			        <button type="submit" title="<?php echo Mage::helper('contacts')->__('Submit') ?>" id="submitBtn" class="button"><span><span><?php echo Mage::helper('contacts')->__('Send') ?></span></span></button>
+			        <button type="submit" title="<?php echo Mage::helper('contacts')->__('Submit') ?>" id="submitBtn" class="button"></button>
 
 
 	</form>
