--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -145,9 +145,11 @@
 </div>
 	<section id="brands">
 		<ul class="slideshow">
-			<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>"></li>
-			<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>"></li>
-			<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>"></li>
-			</ul>
+			<li><img src="<?php echo $this->getSkinUrl('images/splash/headers/great-value.png') ?>" alt="Great Value"></li>
+			<li><img src="<?php echo $this->getSkinUrl('images/splash/headers/luxury-brands.png') ?>" alt="Luxury Brands"></li>
+			<li><img src="<?php echo $this->getSkinUrl('images/splash/headers/free-shipping.png') ?>" alt="Free Shipping"></li>
+			<li><img src="<?php echo $this->getSkinUrl('images/splash/headers/free-returns.png') ?>" alt="Free Returns"></li>
+			<li><img src="<?php echo $this->getSkinUrl('images/splash/headers/cash-on-delivery.png') ?>" alt="Cash on Delivery"></li>
+		</ul>
 	</section>
 </div>
