--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -214,9 +214,11 @@ jQuery(function() {
 </div>
 <section id="brands">
 	<ul class="slideshow">
-		<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>"></li>
-		<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>"></li>
-		<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>"></li>
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/great-value.png') ?>" alt="Great Value"></li>
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/luxury-brands.png') ?>" alt="Luxury Brands"></li>
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/free-shipping.png') ?>" alt="Free Shipping"></li>
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/free-returns.png') ?>" alt="Free Returns"></li>
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/cash-on-delivery.png') ?>" alt="Cash on Delivery"></li>
 		</ul>
 </section>
 </div>
