--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -196,7 +196,7 @@ P.S. Hurry!"/>
 //]]>
 
 	//REDIRECTS PAGE TO A THANK YOU PAGE!
-		elem = $("contactForm"); 
-		elem.writeAttribute('action', 'thankyou'); 
+	//	elem = $("contactForm"); 
+	//	elem.writeAttribute('action', 'thankyou'); 
 
 </script>
