--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -452,7 +452,13 @@ function formatCurrency(num) {
 			jQuery("a#shippingTab").click(
 				 function() {jQuery(".shipping").show();jQuery(".details").hide(); jQuery("#detailsTab").removeClass('selected'); jQuery("#shippingTab").addClass('selected');return false;}
 			);
-	
+			jQuery("a.sizeChart").fancybox({
+				autoScale: true,
+				titleShow: false,
+				href: jQuery('.sizeChartCont').html(),
+				overlayColor: "#111",
+				type: "inline"
+			});
 			/*jQuery('a.sizeChart').live('click', function(){
 				newwindow=window.open("", "mywindow1",'height=400,width=500');
 				var sizeWindowContent = jQuery('.sizeChartCont').html();
@@ -463,21 +469,4 @@ function formatCurrency(num) {
 			});*/
 	 });
 			
-</script>
-<script type="text/javascript">
-(function ($) {
-	
-	$(document).ready(function() {
-
-		$("a.sizeChart").fancybox({
-			autoScale: true,
-			titleShow: false,
-			href: ".sizeChartCont",
-			overlayColor: "#111",
-			type: "inline"
-		});
-		
-	});
-
-})(jQ);
 </script>
