--- a/app/design/frontend/default/rooja/layout/catalog.xml
+++ b/app/design/frontend/default/rooja/layout/catalog.xml
@@ -184,6 +184,7 @@ Product view
         <reference name="head">
             <action method="addJs"><script>varien/product.js</script></action>
             <action method="addJs"><script>varien/configurable.js</script></action>
+			<action method="addJs"><script>jquery/resetjQuery.js</script></action>
 			<action method="addJs"><script>jquery/jquery.fancybox-1.3.4.pack.js</script></action>
 			<action method="addCss"><stylesheet>css/jquery.fancybox-1.3.4.css</stylesheet></action>
             <action method="addItem"><type>js_css</type><name>calendar/calendar-win2k-1.css</name><params/><!--<if/><condition>can_load_calendar_js</condition>--></action>
