jQuery fix on product view

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -458,7 +458,7 @@ function formatCurrency(num) {
 		$("a.sizeChart").fancybox({
 			autoScale: true,
 			titleShow: false,
-			href: 'http://farm3.static.flickr.com/2687/4220681515_cc4f42d6b9.jpg',
+			content: $('.sizeChartCont').html(),
 			overlayColor: "#111"
 		});
 		
