--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -460,6 +460,8 @@ function formatCurrency(num) {
 		$("a.sizeChart").fancybox({
 			autoScale: true,
 			titleShow: false,
+			width: 520,
+			padding: 40,
 			content: $('.sizeChartCont').html(),
 			overlayColor: "#111"
 		});
