--- a/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
+++ b/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
@@ -91,7 +91,8 @@
     border-color:#fff;
 }
 .catalog-product-view #fancybox-content div{
-    overflow:hidden !important;
+    min-width:520px;
+    min-height:480px;
     font-size:13px;
 }
 
