--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -458,9 +458,11 @@ function formatCurrency(num) {
 			 function() {$(".shipping").show();$(".details").hide(); $("#detailsTab").removeClass('selected'); $("#shippingTab").addClass('selected');return false;}
 		);
 		$("a.sizeChart").fancybox({
+			autoScale: true,
 			titleShow: false,
 			padding: 20,
-			overlayColor: "#111"
+			overlayColor: "#111",
+			type: "inline"
 		});
 		
 	});
