--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -715,6 +715,10 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 .leaveCommentRMA{margin-top:20px;}
 
 .sizeChartCont{display:none;}
+#sizeChartCont{
+    width:500px;
+    height:400px;
+}
 
 /* ~~~~~ Typography ~~~~~ */
 
