--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -718,6 +718,7 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 #sizeChartCont{
     width:500px;
     height:400px;
+    margin-top:6px;
 }
 
 /* ~~~~~ Typography ~~~~~ */
