--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -98,7 +98,7 @@ P.S. Hurry!"/>
 			<a href="http://www.twitter.com/roojafashion" title="follow rooja on twitter" target="_blank" id="twitter" class="tr">Follow us on Twitter</a>
 
 			<article id="fbLikes">
-				<fb:like href="http://www.facebook.com/roojafashion" send="false" layout="button_count" width="60" show_faces="false" font="arial" ref="website"></fb:like>
+				<fb:like href="http://www.facebook.com/roojafashion" send="true" layout="button_count" width="60" show_faces="false" font="arial" ref="website"></fb:like>
 
 			</article>
 		</div>
@@ -177,7 +177,7 @@ P.S. Hurry!"/>
 			<h2 id="socialMedia" class="tr">Social Media</h2>
 			<a href="http://twitter.com/roojafashion" class="twitter-follow-button" data-button="grey" data-text-color="#FFFFFF" data-link-color="#00AEFF" data-show-count="false">Follow @roojafashion</a>
 
-		<fb:like href="http://facebook.com/roojafashion" send="true" width="350" show_faces="true" colorscheme="dark" font="arial"></fb:like>
+		<fb:like href="http://facebook.com/roojafashion" send="false" width="350" show_faces="true" colorscheme="dark" font="arial"></fb:like>
 
 			<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
 			<p class="clear">Don&rsquo;t forget to follow us on <a href="http://facebook.com/roojafashion" target="_blank" title="Join us on Facebook">Facebook</a> and <a href="http://twitter.com/roojafashion" target="_blank" title="Follow us on Twitter">Twitter</a>. We will respond to your tweets and wall posts too!</p>
