remove send button

--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -98,7 +98,7 @@ P.S. Hurry!"/>
 			<a href="http://www.twitter.com/roojafashion" title="follow rooja on twitter" target="_blank" id="twitter" class="tr">Follow us on Twitter</a>
 
 			<article id="fbLikes">
-				<fb:like href="http://www.facebook.com/roojafashion" send="true" layout="button_count" width="60" show_faces="false" font="arial" ref="website"></fb:like>
+				<fb:like href="http://www.facebook.com/roojafashion" send="false" layout="button_count" width="60" show_faces="false" font="arial" ref="website"></fb:like>
 
 			</article>
 		</div>
