facebook like debug

--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -68,6 +68,7 @@ $xml = file_get_contents($url);
 $xml = simplexml_load_string($xml);
 echo $likes = $xml->link_stat->like_count;
 ?>
+<!--<?php echo $url; ?>-->
 				
 				</span><?php } ?>
 				<p class="price"><span class="livePrice">
