--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -68,7 +68,7 @@ $xml = file_get_contents($url);
 $xml = simplexml_load_string($xml);
 echo $likes = $xml->link_stat->like_count;
 ?>
-<!--<?php echo urlencode($source_url); ?>-->
+<!--<?php echo $source_url; ?>-->
 				
 				</span><?php } ?>
 				<p class="price"><span class="livePrice">
