fixed slideshow content on register and forget password pages

--- a/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
@@ -71,8 +71,9 @@
 </div>
 <section id="brands">
 	<ul class="slideshow">
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/international-brands.png') ?>" alt="International Brands"></li>
 		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/great-value.png') ?>" alt="Great Value"></li>
-		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/luxury-brands.png') ?>" alt="Luxury Brands"></li>
+		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/luxury-fashion.png') ?>" alt="Luxury Fashion"></li>
 		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/free-shipping.png') ?>" alt="Free Shipping"></li>
 		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/free-returns.png') ?>" alt="Free Returns"></li>
 		<li><img src="<?php echo $this->getSkinUrl('images/splash/header/cash-on-delivery.png') ?>" alt="Cash on Delivery"></li>
