--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -165,12 +165,12 @@ ul#myAccount{float:left;}
 ul#myAccount li{
 	float: left;
 	padding: 10px 20px 29px 0px;
-	background: url("../images/icons/arrow-nav-white.png") no-repeat right 8px;
+	/*background: url("../images/icons/arrow-nav-white.png") no-repeat right 8px;*/
 }
 
 ul#myAccount li.welcome-top {
-	padding: 36px 25px 27px 20px;
-	background: url("../images/icons/arrow-nav-white.png") no-repeat 135px 34px;
+	padding: 36px 12px 27px 20px;
+	/*background: url("../images/icons/arrow-nav-white.png") no-repeat 135px 34px;*/
 	margin: -26px 0 0 0;
 }
 
@@ -207,6 +207,11 @@ ul#myAccount li a{
 	font-size: 1.2em;
 	color: #fff;
 }
+ul#myAccount li.welcome-top a{
+    background: url("../images/icons/arrow-nav-white.png") no-repeat right center;
+    padding-right:12px;
+}
+
 ul#myAccount li ul {
 	display: none;
 	position: absolute;
