--- a/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
+++ b/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
@@ -35,7 +35,7 @@
 	left: 0;
 	width: 40px;
 	height: 480px;
-	background-image: url('/img/fancybox/fancybox.png');
+	background-image: url('../images/fancybox/fancybox.png');
 }
 
 #fancybox-overlay {
@@ -110,7 +110,7 @@
 	right: -15px;
 	width: 30px;
 	height: 30px;
-	background: transparent url('/img/fancybox/fancybox.png') -40px 0px;
+	background: transparent url('../images/fancybox/fancybox.png') -40px 0px;
 	cursor: pointer;
 	z-index: 1103;
 	display: none;
@@ -150,7 +150,7 @@
 	width: 35%;
 	cursor: pointer;
 	outline: none;
-	background: transparent url('/img/fancybox/blank.gif');
+	background: transparent url('../images/fancybox/blank.gif');
 	z-index: 1102;
 	display: none;
 }
@@ -176,12 +176,12 @@
 }
 
 #fancybox-left-ico {
-	background-image: url('/img/fancybox/fancybox.png');
+	background-image: url('../imagesfancybox/fancybox.png');
 	background-position: -40px -30px;
 }
 
 #fancybox-right-ico {
-	background-image: url('/img/fancybox/fancybox.png');
+	background-image: url('../images/fancybox/fancybox.png');
 	background-position: -40px -60px;
 }
 
@@ -212,13 +212,13 @@
 	top: -20px;
 	left: 0;
 	width: 100%;
-	background-image: url('/img/fancybox/fancybox-x.png');
+	background-image: url('../imagesfancybox/fancybox-x.png');
 }
 
 #fancybox-bg-ne {
 	top: -20px;
 	right: -20px;
-	background-image: url('/img/fancybox/fancybox.png');
+	background-image: url('../imagesfancybox/fancybox.png');
 	background-position: -40px -162px;
 }
 
@@ -226,14 +226,14 @@
 	top: 0;
 	right: -20px;
 	height: 100%;
-	background-image: url('/img/fancybox/fancybox-y.png');
+	background-image: url('../imagesfancybox/fancybox-y.png');
 	background-position: -20px 0px;
 }
 
 #fancybox-bg-se {
 	bottom: -20px;
 	right: -20px;
-	background-image: url('/img/fancybox/fancybox.png');
+	background-image: url('../imagesfancybox/fancybox.png');
 	background-position: -40px -182px; 
 }
 
@@ -241,14 +241,14 @@
 	bottom: -20px;
 	left: 0;
 	width: 100%;
-	background-image: url('/img/fancybox/fancybox-x.png');
+	background-image: url('../imagesfancybox/fancybox-x.png');
 	background-position: 0px -20px;
 }
 
 #fancybox-bg-sw {
 	bottom: -20px;
 	left: -20px;
-	background-image: url('/img/fancybox/fancybox.png');
+	background-image: url('../imagesfancybox/fancybox.png');
 	background-position: -40px -142px;
 }
 
@@ -256,13 +256,13 @@
 	top: 0;
 	left: -20px;
 	height: 100%;
-	background-image: url('/img/fancybox/fancybox-y.png');
+	background-image: url('../imagesfancybox/fancybox-y.png');
 }
 
 #fancybox-bg-nw {
 	top: -20px;
 	left: -20px;
-	background-image: url('/img/fancybox/fancybox.png');
+	background-image: url('../imagesfancybox/fancybox.png');
 	background-position: -40px -122px;
 }
 
@@ -295,7 +295,7 @@
 
 #fancybox-title-over {
 	padding: 10px;
-	background-image: url('/img/fancybox/fancy_title_over.png');
+	background-image: url('../imagesfancybox/fancy_title_over.png');
 	display: block;
 }
 
@@ -319,7 +319,7 @@
 
 #fancybox-title-float-left {
 	padding: 0 0 0 15px;
-	background: url('/img/fancybox/fancybox.png') -40px -90px no-repeat;
+	background: url('../imagesfancybox/fancybox.png') -40px -90px no-repeat;
 }
 
 #fancybox-title-float-main {
@@ -327,12 +327,12 @@
 	line-height: 29px;
 	font-weight: bold;
 	padding: 0 0 3px 0;
-	background: url('/img/fancybox/fancybox-x.png') 0px -40px;
+	background: url('../imagesfancybox/fancybox-x.png') 0px -40px;
 }
 
 #fancybox-title-float-right {
 	padding: 0 0 0 15px;
-	background: url('/img/fancybox/fancybox.png') -55px -90px no-repeat;
+	background: url('../imagesfancybox/fancybox.png') -55px -90px no-repeat;
 }
 
 /* IE6 */
