rewards spendings top

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -729,6 +729,8 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
     margin-top:6px;
 }
 
+.mypoints-transfers-spendings{margin-top:15px;}
+
 /* ~~~~~ Typography ~~~~~ */
 
 a {text-decoration:none; color:#000;}
