--- a/app/locale/en_US/template/email/contact_form.html
+++ b/app/locale/en_US/template/email/contact_form.html
@@ -1,9 +1,11 @@
-<!--@subject Contact Form@-->
+<!--@subject {{var data.subject}}@-->
 <!--@vars
 {"var data.name":"Sender Name",
+"var data.subject":"Subject",
 "var data.email":"Sender Email",
 "var data.comment":"Comment"}
 @-->
 Name: {{var data.name}}
 E-mail: {{var data.email}}
+Subject: {{var data.subject}}
 Comment: {{var data.comment}}
