--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -99,12 +99,12 @@ foreach ($categories as $_category){
         foreach($_category->getChildren() as $subcategory){
 		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
             if($c->getIsActive()){ // check if category is active
-				$fivedays = date('y-m-d H:G:00', strtotime("+2 days"));
-				$today = date('y-m-d H:G:00');
+				$fivedays = strtotime(date('y-m-d H:G:00', strtotime("+2 days")));
+				$today = strtotime(date('y-m-d H:i:s'));
 				if (!$c->getSale_start_date() == null) {
-	                $startdate = date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00';
-					$enddate = date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00';
-					if(timeBetweenNowAndDeadline($enddate) != 0){
+	                $startdate = strtotime(date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00');
+					$enddate = strtotime(date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00');
+					//if(timeBetweenNowAndDeadline($enddate) != 0){
 					if (($enddate > $today && $enddate < $fivedays && $startdate < $today) || ($enddate > $today && $enddate > $fivedays && $startdate < $today)) {
 						if($i == 3){
 							?>
@@ -124,7 +124,7 @@ foreach ($categories as $_category){
                 <h2<?php if($i%2==1) echo " class='blackBg'"; ?>><?php echo $c->getName(); ?></h2>
 				<p>Sale ends in <?php echo timeBetweenNowAndDeadline($enddate); ?></p>
             </article>
-				<?php } $i++; }}}}}}  }} ?>			
+				<?php } $i++; }}}}}}  } ?>			
 
 
 <script type="text/javascript">
